# agent-workspace

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  dot-gitmodules  install.config.example.yaml  install.config.template.yaml  pyproject.toml
.github/workflows/: build.yml
agent_workspace/core/: __init__.py
agent_workspace/scripts/: install.py  install.sh  send_opencode_message.py  send_opencode_message_tui.js  validate-core.sh  workspace.py
core/agents/: academic-writer.yaml  academic-writing-supervisor.yaml  bayesian-modeler.yaml  causal-analyst.yaml  classical-stats-analyst.yaml  code-reviewer.yaml  concept-explainer.yaml  data-science-project-supervisor.yaml  data-steward.yaml  eda-analyst.yaml  exam-coach.yaml  experiment-tracker.yaml  feature-orchestrator.yaml  flashcard-generator.yaml  issue-resolver.yaml  lecture-notes-generator.yaml  literature-scout.yaml  ml-experimenter.yaml  model-deployer.yaml  obsidian-manager.yaml  pair-programmer.yaml  presentation-builder.yaml  project-manager.yaml  report-writer.yaml  reproducibility-guardian.yaml  revision-planner.yaml  stats-modeler.yaml  ts-forecaster.yaml
core/commands/: audit-reproducibility.yaml  check-assumptions.yaml  check-convergence.yaml  check-stationarity.yaml  compare-models.yaml  document-dataset.yaml  draft-methods.yaml  draft-report-section.yaml  explain-concept.yaml  generate-lecture-notes.yaml  generate-slides.yaml  generate-study-summary.yaml  ideate-research-question.yaml  refactor.yaml  (+10 more)
scripts/: __init__.py  install.py  install.sh  requirements-install.txt  send_opencode_message.js  validate_opencode.py  workspace.py
(+177 files in other folders)
